kubernetes/apps/apps/jellyfin/jellyfin/app/service.yaml
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: jellyfin-service
# spec:
#   type: ExternalName
#   externalName: wireguard.network.svc.cluster.local
#   ports:
#     - name: http
#       targetPort: 443
#       port: 443
#       # targetPort: 8097
#       # port: 8097
---
kind: Service
apiVersion: v1
metadata:
  name: jellyfin-tcp
  labels:
    service-type: ingress
  annotations:
    # external-dns.alpha.kubernetes.io/hostname: jellyfin-tcp.internal
    service.cilium.io/affinity: "remote"
    service.cilium.io/global: "true"
    traefik.ingress.kubernetes.io/service.nativelb: "true"
    # service.cilium.io/shared: "true"
spec:
  selector:
    app: jellyfin
  ports:
  - port: 8096             # < port to open on the outside on the server
    targetPort: 8096       # < targetport. port on the pod to passthrough
    name: http-tcp         # < reference name for the port in the deployment yaml
    protocol: TCP
  - port: 8920
    targetPort: 8920
    name: https-tcp
  - port: 1900             # < port to open on the outside on the server
    targetPort: 1900       # < targetport. port on the pod to passthrough
    name: dlna-udp         # < reference name for the port in the deployment yaml
    protocol: UDP
  - port: 7359
    targetPort: 7359
    name: discovery-udp
    protocol: UDP
  # loadBalancerIP: None
